[package]
name = "idb-tap-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
prost = "0.12"
futures = "0.3"
http = "0.2"
image = "0.25.6"
imageproc = "0.25.0"
thiserror = "1.0"
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[features]
default = ["grpc"]
grpc = []
ffi = []
embedded = []

[[bin]]
name = "idb-tap-simple"
required-features = ["grpc"]

[[bin]]
name = "idb-tap-ffi"
required-features = ["ffi"]
